--- a/index.html
+++ b/index.html
@@ -1,51 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
+
+  <!-- stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Ubuntu&display=swap"
+    rel="stylesheet">
+
+  <!-- fontawesome icons -->
+  <script src="https://kit.fontawesome.com/d3370a0a4b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
   <section id="title">
+    <div class="container-fluid">
+      <!-- Nav Bar -->
+      <div class="navbar navbar-expand-lg navbar-dark">
+        <a href="" class="navbar-brand">tinDog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Download</a>
+            </li>
+          </ul>
+        </div>
+      </div>
 
-    <!-- Nav Bar -->
-    <div class="navbar navbar-expand-lg bg-dark navbar-dark">
-      <a href="" class="navbar-brand">TinDog</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a href="" class="nav-link">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">Download</a>
-          </li>
-        </ul>
+      <!-- Title -->
+      <div class="row">
+        <div class="col-lg-6">
+          <h1>Meet new and interesting dogs nearby.</h1>
+          <button type="button" class="btn btn-lg btn-dark">
+            <i class="fa-brands fa-apple"></i>
+            Download
+          </button>
+          <button type="button" class="btn btn-lg btn-outline-light">
+            <i class="fa-brands fa-google-play"></i>
+            Download
+          </button>
+        </div>
+        <div class="col-lg-6">
+          <img src="images/iphone6.png" alt="iphone-mockup">
+        </div>
       </div>
     </div>
 
 
-
-    <!-- Title -->
-
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
 
   </section>
 
