--- a/index.html
+++ b/index.html
@@ -60,12 +60,10 @@
           </button>
         </div>
         <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
-
-
 
   </section>
 
@@ -120,7 +118,6 @@
     </div>
   </section>
 
-
   <!-- Press -->
 
   <section id="press">
@@ -128,14 +125,11 @@
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
-
   </section>
-
 
   <!-- Pricing -->
 
   <section id="pricing">
-
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
@@ -166,24 +160,31 @@
 
   </section>
 
-
   <!-- Call to Action -->
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-title">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark">
+      <i class="fa-brands fa-apple"></i>
+      Download
+    </button>
+    <button type="button" class="btn btn-outline-light">
+      <i class="fa-brands fa-google-play"></i>
+      Download
+    </button>
 
   </section>
 
-
   <!-- Footer -->
-
   <footer id="footer">
-
+    <div class="footer-contact-links">
+      <i class="fa-brands fa-twitter footer-icon"></i>
+      <i class="fa-brands fa-facebook footer-icon"></i>
+      <i class="fa-brands fa-instagram footer-icon"></i>
+      <i class="fa-solid fa-envelope footer-icon"></i>
+    </div>
     <p>© Copyright TinDog</p>
-
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
